--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/aws/aws-xray-sdk-go
+package: github.com/quorumcontrol/aws-xray-sdk-go
 import:
 - package: github.com/aws/aws-sdk-go
   version: 1.10.x
